# ghost-engine

./: .gitmodules  CMakeLists.txt  compile_flags.txt
src/: main.cpp
